# php-guard

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  php-guard.toml  test_aarch64.sh
.github/workflows/: ci.yml  release.yml
crates/php-guard-cli/: Cargo.toml
crates/php-guard-cli/src/: commands.rs  config.rs  main.rs
crates/php-guard-core/: Cargo.toml  build.rs
crates/php-guard-core/examples/: encrypt_file.rs
crates/php-guard-core/src/: file_handler.rs  lib.rs
crates/php-guard-ext/: Cargo.toml
crates/php-guard-ext/src/: hooks.rs  lib.rs  php_extension.rs
documents/: ARCHITECTURE.md  CLI_TOOL_UPDATE.md  DOCUMENTATION_UPDATE.md  GITHUB_ACTIONS_UPDATE.md  IMPLEMENTATION_REPORT.md  IMPROVEMENT_ANALYSIS.md  QUICKSTART.md  REFACTORING_REPORT.md  USAGE.md  WINDOWS_SUPPORT.md  WSL_TEST_REPORT.md
examples/: encrypt_file.rs
scripts/: generate-key.bat  generate-key.sh  php-config.bat  php-config.ps1
src/: config.rs  crypto.rs  hooks.rs  hooks.rs.bak  lib.rs  php_extension.rs
test/: example.php  test_encrypt.php
tools/: generate-key.php  php-guard.php  verify-config.php
