[workspace]
members = [
    "crates/php-guard-core",
    "crates/php-guard-ext",
    "crates/php-guard-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["erasin <erasinoo@gmail.com>"]
license = "MIT"
repository = "https://github.com/erasin/php-guard"

[workspace.dependencies]
php-guard-core = { path = "crates/php-guard-core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
